JavaProject/src/info3/parser/javacc/projet/langageC/test/pass/test1.c
ALGORITHM(test1){
	while(x>0){
		while(x>0){
			while(x>0){
				while(x>0){
					x = x + 1;
				}
				a = 1;
			}
			a = 1;
		}
		a = 1;
	}
	a = 1;
}
