JavaProject/src/info3/parser/javacc/projet/langageC/test/fail/test9.c
ALGORIRHM(test9){
        bon := 3;
}
